# LibreTracks

./: .gitattributes  .gitignore  .graphify_python  AGENTS.md  CLAUDE.md  Cargo.toml  PLAN_DESARROLLO.md  PLAN_DESARROLLO_CAMBIO_DE_TONO.md  PLAN_DESARROLLO_DAW.md  PLAN_DESARROLLO_MOTOR_AUDIO.md  PLAN_DESARROLLO_MOTOR_AUDIO_V2.md  README.es.md  README.md  THIRD-PARTY-NOTICES.md  package-lock.json  package.json  test-output.txt
.cargo/: config.toml
apps/desktop/src-tauri/: Cargo.toml  build.rs  entitlements.plist  lt_audio_engine_v2.lib  tauri.android.conf.json  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/examples/: analyze_audio_dump.rs
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/icons/file-types/: ltpkg.icns  ltsession.icns  ltset.icns
apps/desktop/src-tauri/installer/: nsis-hooks.nsh  nsis-installer.nsi
apps/desktop/src-tauri/macos-compat/: highsierra_cookie_symbols.c  highsierra_cookie_symbols.m
apps/desktop/src-tauri/src/: android_audio_devices.rs  audio_engine.rs  audio_runtime.rs  automation.rs  error.rs  error_log.rs  external_project.rs  file_dialog.rs  lib.rs  main.rs  midi.rs  midi_android.rs  mobile_files.rs  remote.rs  resource_monitor.rs  settings.rs  state.rs
apps/desktop/src-tauri/src/audio/: automation.rs  engine.rs  mod.rs
apps/desktop/src-tauri/src/audio_runtime/: backend.rs  mixer.rs  mod.rs  pitch.rs  playback_dump.rs  source.rs  telemetry.rs
apps/desktop/src-tauri/src/commands/: engine_v2.rs  events.rs  library.rs  mod.rs  pads.rs  project.rs  settings.rs  system.rs  timeline.rs  transport.rs
apps/desktop/src-tauri/src/infra/: error_log.rs  mod.rs
apps/desktop/src-tauri/src/midi/: mod.rs
apps/desktop/src-tauri/src/models/: mod.rs  view.rs
apps/desktop/src-tauri/src/platform/: linux_webkit.rs  macos_bookmarks.rs  mod.rs  resource_monitor.rs
apps/desktop/src-tauri/src/remote/: android.rs  mod.rs
apps/desktop/src-tauri/src/state/: arrangement.rs  audio_prep.rs  automation_runtime.rs  external_import.rs  history.rs  library.rs  mod.rs  regions.rs  session.rs  song_edit.rs  tests.rs  timeline_math.rs  track_tree.rs
crates/libretracks-project/: Cargo.toml
crates/libretracks-project/src/: importer.rs  lib.rs  package.rs  session_package.rs  song_store.rs  waveform.rs
crates/libretracks-remote/: Cargo.toml
crates/libretracks-remote/src/: lib.rs
crates/lt-audio-engine-v2/: Cargo.toml  build.rs
crates/lt-audio-engine-v2/src/: commands.rs  error.rs  events.rs  ffi.rs  lib.rs  snapshot.rs
crates/lt-audio-engine-v2/src/tests/: mod.rs  test_commands.rs  test_device_fallback.rs  test_events.rs  test_snapshot.rs
native/audio-engine-v2/: AUDIO_LOADING_ROADMAP.md  CMakeLists.txt  DEPENDENCIES.md  PREARMED_JUMPS.md  WARP_BACKEND_NOTES.md  vcpkg.json
native/audio-engine-v2/bench/: bench_bungee_warp_backends.cpp  bench_import_while_playing.cpp  bench_jump_paths.cpp  bench_live_readiness.cpp  bench_pitch_audio_thread.cpp  bench_prearm_vs_reactive.cpp  bench_real_sample_jump_stability.cpp  bench_source_streaming_architectures.cpp
native/audio-engine-v2/cmake/: dependencies.cmake  options.cmake
native/audio-engine-v2/include/lt_engine/: engine_impl.h  lt_engine.h
native/audio-engine-v2/scripts/: build-real-rubberband.ps1  build.ps1  build.sh
native/audio-engine-v2/src/core/: CMakeLists.txt  commands.cpp  engine_core.cpp  events.cpp  snapshot.cpp
native/audio-engine-v2/src/devices/: CMakeLists.txt  audio_device_manager.cpp  audio_device_manager_oboe.cpp
native/audio-engine-v2/src/diagnostics/: CMakeLists.txt  audio_dump.cpp  diagnostics_stub.cpp
native/audio-engine-v2/src/ffi/: CMakeLists.txt  engine_impl.cpp  lt_engine_ffi.cpp
native/audio-engine-v2/src/pitch/: CMakeLists.txt  bungee_pitch_voice.cpp  bungee_voice_manager.cpp  bungee_warp_voice.cpp  offline_pitch_segment_renderer.cpp  persistent_pitch_proxy_cache.cpp  pitch_cache.cpp  pitch_stub.cpp  prearmed_jump_manager.cpp  realtime_pitch_engine.cpp  realtime_pitch_stream.cpp  rubberband_pitch_processor.cpp  rubberband_warp_voice.cpp  seek_safe_pitch_stream.cpp  signalsmith_warp_voice.cpp  warp_voice_manager.cpp
native/audio-engine-v2/src/render/: CMakeLists.txt  fade_processor.cpp  metronome_renderer.cpp  mixer.cpp  pad_renderer.cpp  pitch_resolution.cpp  render_stub.cpp  track_renderer.cpp  voice_guide_renderer.cpp
native/audio-engine-v2/src/scheduler/: CMakeLists.txt  jump_scheduler.cpp
native/audio-engine-v2/src/session/: CMakeLists.txt  session.cpp  session_adapter.cpp
native/audio-engine-v2/src/sources/: CMakeLists.txt  audio_decoder.cpp  block_cache.cpp  decoded_source.cpp  io_throttle.cpp  libav_decoder.cpp  mediacodec_decoder.cpp  original_source_cache.cpp  prebuffer_worker.cpp  preparation_queue.cpp  resampler.cpp  source_manager.cpp  sources_stub.cpp  streaming_source.cpp  worker_pool.cpp
native/audio-engine-v2/src/transport/: CMakeLists.txt  transport_clock.cpp
native/audio-engine-v2/tests/: CMakeLists.txt  bungee_pitch_voice_tests.cpp  bungee_voice_manager_tests.cpp  main.cpp  pitch_alignment_tests.cpp  pitch_cache_tests.cpp  pitch_frequency_tests.cpp  pitch_preparation_tests.cpp  pitch_proxy_async_tests.cpp  pitch_proxy_continuity_tests.cpp  pitch_proxy_persistent_tests.cpp  pitch_resolution_tests.cpp  pitch_seek_tests.cpp  prearmed_jump_tests.cpp  prepared_pitch_alignment_tests.cpp  prepared_pitch_cache_tests.cpp  realtime_pitch_phases_5_to_7.cpp  realtime_pitch_phases_8_to_10.cpp  realtime_pitch_stream_tests.cpp  signalsmith_warp_voice_tests.cpp  test_audio_decoder.cpp  test_audio_dump.cpp  test_audio_fixtures.cpp  test_audio_fixtures.h  test_command_json.cpp  test_device_channel_layout.cpp  test_fade_processor.cpp  test_folder_controls.cpp  test_jump_scheduler.cpp  test_metronome_renderer.cpp  test_mixer_realtime_controls.cpp  test_pad_renderer.cpp  test_pitch_backend_identity.cpp  test_session_validation.cpp  test_streaming_source_cache.cpp  test_transport_clock.cpp  test_voice_guide_renderer.cpp  transport_audio_sync_tests.cpp  warp_cascade_isolated_tests.cpp
(+411 files in other folders)
