[workspace]
members = [
    "apps/desktop/src-tauri",
    "crates/libretracks-core",
    "crates/libretracks-project",
    "crates/libretracks-audio",
    "crates/libretracks-remote",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
version = "0.0.1"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
