[package]
name = "libretracks-project"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
hound = "3"
libretracks-core = { path = "../libretracks-core" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile = "3"
