[package]
name = "libretracks-project"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
hound = "3"
libretracks-core = { path = "../libretracks-core" }
rayon = "1.10"
serde.workspace = true
serde_json.workspace = true
symphonia = { version = "0.5", default-features = false, features = ["pcm", "wav"] }
thiserror.workspace = true

[dev-dependencies]
tempfile = "3"
