[package]
name = "libretracks-project"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
base64 = "0.22"
hound = "3"
libretracks-core = { path = "../libretracks-core" }
rayon = "1.10"
serde.workspace = true
serde_json.workspace = true
symphonia = { version = "0.5", default-features = false, features = ["aac", "flac", "isomp4", "mp3", "ogg", "pcm", "vorbis", "wav"] }
thiserror.workspace = true
zip = "2"

[dev-dependencies]
tempfile = "3"
