[package]
name = "lt-audio-engine-v2"
version = "0.1.0"
edition = "2021"
description = "Rust FFI bindings to the LibreTracks C++ Audio Engine v2"

[dependencies]
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
thiserror   = "2"
libloading  = "0.8"

[build-dependencies]
# build.rs links the compiled C++ shared library.
# No bindgen is used: the ABI is a stable hand-written C ABI.
