[package]
name = "libretracks-desktop"
version = "1.5.0"
edition = "2021"
default-run = "libretracks-desktop"
autobins = false

[[bin]]
name = "libretracks-desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
base64 = "0.22"
flate2 = "1"
libretracks-audio = { path = "../../../crates/libretracks-audio" }
lt-audio-engine-v2 = { path = "../../../crates/lt-audio-engine-v2" }
libretracks-project = { path = "../../../crates/libretracks-project" }
libretracks-remote = { path = "../../../crates/libretracks-remote" }
midir = "0.9"
quick-xml = "0.37"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
rfd = "0.15"
rayon = "1.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = { version = "0.33", default-features = false, features = ["system"] }
tauri = { version = "2", features = [] }
thiserror = "2"
tokio = { version = "1", features = ["sync", "time"] }
tauri-plugin-dialog = "2.7.0"
tauri-plugin-opener = "2"

[dependencies.libretracks-core]
path = "../../../crates/libretracks-core"

[features]
audio-engine-v2 = []
# Build/test without linking the native C++ audio engine. Propagates to the
# engine crate's `no-link` feature, which swaps the FFI extern block for
# stubs so `cargo test` compiles without the prebuilt shared library.
no-link = ["lt-audio-engine-v2/no-link"]

[dev-dependencies]
hound = "3"
tempfile = "3"
